--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,8 @@ ignore = [
 
 [tool.mypy]
 python_version = "3.11"
-warn_return_any = true
+warn_return_any = false
 warn_unused_ignores = true
-disallow_untyped_defs = true
+disallow_untyped_defs = false
+check_untyped_defs = true
 ignore_missing_imports = true
