Implement comprehensive CLI UX improvements
- Add theme system with semantic colors (nothx/theme.py)
- Add interactive welcome screen with command selector (Daytona-style)
- Add questionary-based interactive prompts throughout CLI
- Add account management commands (add/list/remove)
- Add new utility commands: senders, search, history, export, test, reset
- Add shell completion generation (bash/zsh/fish)
- Add update command for version checking
- Add command aliases (r, s, rv, h)
- Add --json output flag for scripting
- Add humanize for relative dates
- Improve progress indicators with rich.progress
- Add success rate tracking to status command
- Update tests with 18 new test cases for db functions
- Update README with new commands documentation
- Update CLAUDE.md with theme system documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ classifiers = [
 dependencies = [
     "anthropic>=0.40.0",
     "click>=8.0",
+    "humanize>=4.0.0",
+    "questionary>=2.0.0",
     "rich>=13.0",
 ]
 
