Fix lint and type check issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dev = [
     "pytest-cov>=4.0",
     "ruff>=0.4.0",
     "mypy>=1.10.0",
+    "types-requests>=2.30.0",
     "anthropic>=0.40.0",
     "openai>=1.0.0",
     "google-generativeai>=0.3.0",
