Prepare nothx for open source: add Claude management patterns and contributor docs
- Add .claude/settings.json with permission-based access control (allow/deny lists)
- Add .claude/commands/ with test, lint, and release workflows
- Add .claude/agents/email-expert.md for domain-specific expertise
- Add SECURITY.md for responsible disclosure policy
- Add CONTRIBUTING.md with development setup and guidelines
- Add .env.example as template for environment variables
- Update .gitignore to track .claude/ while excluding local overrides

Security audit completed: no sensitive data or credentials found in codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ htmlcov/
 # nothx local data
 .nothx/
 
+# Claude local settings (keep .claude/ but ignore local overrides)
+.claude/settings.local.json
+
 # macOS
 .DS_Store
 
@@ -52,4 +55,5 @@ htmlcov/
 # Secrets (never commit)
 *.env
 .env.*
+!.env.example
 config.json
